--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1,4 +1,7 @@
 /*Tarjetas*/
+body{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .col {
     display: inline-flex;
 }
